Bug 516323 - Reset libfishsound when seeking to 0 so it doesn't die re-reading header packets. r=doublec